--- a/task-kaban/package.json
+++ b/task-kaban/package.json
@@ -21,6 +21,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router": "^6.17.0",
     "react-router-dom": "6.3.0",
     "tailwind-merge": "^2.2.1",
