--- a/task-kaban/package.json
+++ b/task-kaban/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
+    "formik": "^2.4.5",
     "lucide-react": "^0.343.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
